--- a/package.json
+++ b/package.json
@@ -7,20 +7,36 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest",
+    "format": "prettier --write \"src/**/*.(js|jsx|ts|tsx|css|scss)\"",
+    "format:check": "prettier -c \"src/**/*.(js|jsx|ts|tsx|css|scss)\""
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^4.0.4",
+    "@testing-library/react-native": "^7.2.0",
+    "@types/jest": "^28.1.6",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@types/react-redux": "^7.1.24",
+    "jest": "^27.0.0",
+    "prettier": "2.7.1",
+    "react-test-renderer": "^17.0.2",
     "typescript": "~4.3.5"
   },
   "private": true
