--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:check": "prettier -c \"src/**/*.(js|jsx|ts|tsx|css|scss)\""
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
